[package]
name = "rustnb"
version = "0.1.4"
authors = ["Dustin Cannon <dustin.cannon@gmail.com>"]
license = "MIT"
edition = "2018"
description = "A library for interacting with the Netbox REST API"
readme = "README.md"
homepage = "https://github.com/exokernel/rustnb"
repository = "https://github.com/exokernel/rustnb"
keywords = ["netbox"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
